Improve my model for classification, fix bugs

--- a/AI/backend/templates/login.html
+++ b/AI/backend/templates/login.html
@@ -7,6 +7,9 @@
             <div class="auth__title auth__title_lock">
                Look into<br> the camera
             </div>
+            <div class="auth__title auth__title_error">
+               Oops... Try again
+            </div>
             <div class="auth__title auth__title_open">
                Welcome!
             </div>
